5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1712_2498.log
== TEST (2019-05-08 15:15:15) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
   if (pca = pcb):
		ano = ano + 1
print(ano)
		
	
-- ERROR:
File "XXXX", line 9
    if (pca = pcb):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:15:28) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
if (pca = pcb):
	ano = ano + 1
print(ano)
		
	
-- ERROR:
File "XXXX", line 9
    if (pca = pcb):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:11) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
		if (pca = pcb):
		ano = ano + 1
  		print(ano)
			
	
-- ERROR:
File "XXXX", line 9
    if (pca = pcb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:16) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
		if(pca = pcb):
		ano = ano + 1
  		print(ano)
			
	
-- ERROR:
File "XXXX", line 9
    if(pca = pcb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:24) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
		
if(pca = pcb):
	ano = ano + 1
  	print(ano)
		
	
-- ERROR:
File "XXXX", line 10
    if(pca = pcb):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:29) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
		
if(pca == pcb):
	ano = ano + 1
  	print(ano)
		
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:39) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
		if(pca == pcb):
	   ano = ano + 1
  	   print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    if(pca == pcb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:47) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
	if(pca == pcb):
	   ano = ano + 1
  	   print(ano)
	 	
	
-- ERROR:
File "XXXX", line 11
    print(ano)
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:17:22) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 ):
	a = a * (pca/100)
	b = b * (pcb/100)
	if(pca == pcb):
	   ano = ano + 1
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 11
    print(ano)
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:19:30) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0 and pca == pcb):
	a = a * (pca/100)
	b = b * (pcb/100)
   ano = ano + 1
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:24:07) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0):
	a = a * (pca/100)
	b = b * (pcb/100)
   ano = ano + 1

if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:24:33) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0):
	a = a * (pca/100)
	b = b * (pcb/100)
   ano=ano+1

if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano=ano+1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:25:12) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano  = 0
while (a > 0 and b > 0):
	a = a * (pca/100)
	b = b * (pcb/100)
ano=ano+1

if (pca >= pcb):
	print(ano)
	 	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:27) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * (pca/100)
	b = b * (pcb/100)
   ano = ano + 1

if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:26:47) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * (pca/100)
	b = b * (pcb/100)
  	 ano = ano + 1

if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:28:53) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
	b = b * (pcb/100)
  	ano = ano + 1
if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:05) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
	b = b * (pcb/100)
  	ano = ano + 1
		if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:20) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
		a = a * pca/100
		b = b * (pcb/100)
  		ano = ano + 1
	if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:23) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
		a = a * pca/100
		b = b * (pcb/100)
  			ano = ano + 1
	if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    ano = ano + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:30) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
a = a * pca/100
b = b * (pcb/100)
ano = ano + 1
	if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 7
    a = a * pca/100
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:40) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
b = b * (pcb/100)
ano = ano + 1
	if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 10
    if (pca >= pcb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:48) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
b = b * (pcb/100)
ano = ano + 1
if (pca >= pcb):
	print(ano)
	 	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:52) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
b = b * (pcb/100)
ano = ano + 1
if (pca >= pcb):
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 11
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:59) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
while (a > 0 and b > 0):
	a = a * pca/100
b = b * (pcb/100)
ano = ano + 1
if (pca >= pcb):
	print(ano)
	 	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:16) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
	ano = 0
	a = a * (pca/100)
   b = b * (pcb/100)
   ano = ano + 1
if (pca >= pcb):
	print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    b = b * (pcb/100)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:34) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
	ano = 0
	a = a * (pca/100)
   b = b * (pcb/100)
   ano = ano + 1
			if (pca >= pcb):
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    b = b * (pcb/100)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:34:45) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
	ano = 0
	a = a * (pca/100)
   b = b * (pcb/100)
   ano = ano + 1
	if (pca >= pcb):
		print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    b = b * (pcb/100)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:35:08) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
	ano = 0
	a = a * (pca/100)
   b = (b * (pcb/100))
   ano = ano + 1
	if (pca >= pcb):
		print(ano)
	 	
	
-- ERROR:
File "XXXX", line 9
    b = (b * (pcb/100))
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:02) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

  while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
		print(ano)
	 	
	
-- ERROR:
File "XXXX", line 6
    while (a > 0 and b > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:05) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
		print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:11) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:14) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
   print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:18) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
         print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:20) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
          print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:22) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
           print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:22) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
            print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:23) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
             print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:24) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
              print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:25) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
               print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:36:26) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
                print(ano)
	 	
	
-- EXECUTION TIME:
0.165098
-- ERROR:
  File "/home/codebench/codes/1712/2498/main.py", line 12
    print(ano)
             ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:26) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
                print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:36) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):

print(ano)
	 	
	
-- ERROR:
File "XXXX", line 13
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:36:44) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))

while (a > 0 and b > 0):
		ano = 0
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
			print(ano)
	 	
	
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:37:53) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
		a = a * (pca/100)
		b = (b * (pcb/100))
		ano = ano + 1
		if (pca >= pcb):
			print(ano)
	 	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:39:05) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
		a = a * (pca/100)
		b = b * (pcb/100)
		ano = ano + 1
		if (pca >= pcb):
			print(ano)
	 	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:43:14) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
		a = a * (pca/100)
		b = b * (pcb/100)
		ano = ano + 1
		if (pca >= pcb):
print(ano)
	 	
	
-- ERROR:
File "XXXX", line 12
    print(ano)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:48:27) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
		a = a * (pca/100)
		b = b * (pcb/100)
		ano = ano + 1
		a = float(input("numero de habitantes: "))
      b = float(input("numero de habitantes: "))
      pca = float(input("percentual a: "))
      pcb = float(input("percentual b:"))

	else:
print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 13
    b = float(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:49:12) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
		a = a * (pca/100)
		b = b * (pcb/100)
		ano = ano + 1
		a = float(input("numero de habitantes: "))
      b = float(input("numero de habitantes: "))
      pca = float(input("percentual a: "))
      pcb = float(input("percentual b:"))
	else:
print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 13
    b = float(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:50:13) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
		a = float(input("numero de habitantes: "))
      b = float(input("numero de habitantes: "))
      pca = float(input("percentual a: "))
      pcb = float(input("percentual b:"))
		a = a * (pca/100)
		b = b * (pcb/100)
		ano = ano + 1
		
	else:
		print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 10
    b = float(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:51:39) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
			a = float(input("numero de habitantes: "))
      	b = float(input("numero de habitantes: "))
     		pca = float(input("percentual a: "))
      	pcb = float(input("percentual b:"))
			a = a * (pca/100)
			b = b * (pcb/100)
			ano = ano + 1
	else:
		print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 10
    b = float(input())
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:51:55) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
		a = float(input("numero de habitantes: "))
      	b = float(input("numero de habitantes: "))
     		pca = float(input("percentual a: "))
      	pcb = float(input("percentual b:"))
			a = a * (pca/100)
			b = b * (pcb/100)
			ano = ano + 1
	else:
		print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 10
    b = float(input())
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:52:23) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
		float(input("numero de habitantes: "))
      float(input("numero de habitantes: "))
     		pca = float(input("percentual a: "))
      	pcb = float(input("percentual b:"))
			a = a * (pca/100)
			b = b * (pcb/100)
			ano = ano + 1
	else:
		print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 10
    float(input())
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:52:53) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
			float(input("numero de habitantes: "))
      	float(input("numero de habitantes: "))
     		float(input("percentual a: "))
      	float(input("percentual b:"))
			a = a * (pca/100)
			b = b * (pcb/100)
			ano = ano + 1
	else:
		print(ano)
	
		  

	 	
	
-- ERROR:
File "XXXX", line 10
    float(input())
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 17:57:19) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
	
while (a > 0 and b > 0):
	if (pca < pcb):
			a = a * (pca/100)
			b = b * (pcb/100)
			ano = ano + 1
	else:
		print(ano)
	
		  

	 	
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:03:12) 
-- CODE:
a = float(input("numero de habitantes: "))
b = float(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
pca = pca/100
pcb = pcb/100
while (a > b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:04:41) 
-- CODE:
a = int(input("numero de habitantes: "))
b = int(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
ano = 0
pca = pca/100
pcb = pcb/100
while (a < b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:07:10) 
-- CODE:
a = int(input("numero de habitantes: "))
b = int(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
pca = pca/100
pcb = pcb/100
ano = 0
while(a < b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:07:24) 
-- CODE:
a = int(input("numero de habitantes: "))
b = int(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
pca = pca/100
pcb = pcb/100
ano = 0
while(a < b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 18:07:36) 
-- CODE:
a = int(input("numero de habitantes: "))
b = int(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
pca = pca/100
pcb = pcb/100
ano = 0
while(a < b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 18:07:56) 
-- CODE:
a = int(input("numero de habitantes: "))
b = int(input("numero de habitantes: "))
pca = float(input("percentual a: "))
pcb = float(input("percentual b:"))
pca = pca/100
pcb = pcb/100
ano = 0
while(a < b):
	b = b * pcb + b
	a = a * pca + a
	ano = ano + 1
print(ano)
	
		  

	 	
	
-- EXECUTION TIME:
0.186853
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
